# try-mesop

./: README.md  pyproject.toml
app/: app_chat_test.py  app_text_to_text_test.py
